fixed update route  by making sure the name attributes matches the schema

--- a/views/animals/edit.ejs
+++ b/views/animals/edit.ejs
@@ -20,7 +20,7 @@
             <label>
               LOCATION:<input
                 type="text"
-                name="color"
+                name="location"
                 value="<%= animal.location %>"
                 placeholder="enter animal location"
               />
@@ -28,7 +28,7 @@
             <label>
               LIFE EXPECTANCY:<input
                 type="number"
-                name="life expectancy"
+                name="lifeExpectancy"
                 value="<%= animal.lifeExpectancy %>"
                 placeholder="enter life expectancy"
               />
